resources/spa-and-api/webhost.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webhost
  labels:
    app: webhost
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webhost
  template:
    metadata:
      labels:
        app: webhost
    spec:
      serviceAccountName: webhost
      containers:
      - name: webhost
        image: example-spa:1.0
        volumeMounts:
          - name: webhost-config
            mountPath: /usr/webhost/config.json
            subPath: config.json
            readOnly: true
          - name: spa-config
            mountPath: /usr/webhost/content/config.json
            subPath: config.json
            readOnly: true
      volumes:
        - name: webhost-config
          configMap:
            name: webhost-config
        - name: spa-config
          configMap:
            name: spa-config
---
kind: Service
apiVersion: v1
metadata:
  name: webhost-svc
spec:
  selector:
    app: webhost
  ports:
  - name: http
    protocol: "TCP"
    port: 8000
