resources/spa-and-api/nginx-gateway-routes.yaml
##########################################
# NGINX routes for the example SPA and API
##########################################
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhost-route
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx
  hostnames:
  - www.demoapp.example
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: webhost-svc
      kind: Service
      port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demoapi-route
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx
  hostnames:
  - api.demoapp.example
  rules:
  - matches:
    - path:
        value: /api
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: demoapi-svc
      kind: Service
      port: 8000
